--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>adpitor</title>
+      <title>Puzzles Demo</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -57,7 +57,7 @@
                      <a href="#review">Review</a>
                   </li>
                   <li>
-                     <a href="#contact">Conatct</a>
+                     <a href="#contact">Contact</a>
                   </li>
                </ul>
             </nav>
@@ -193,7 +193,7 @@
                                  <div class="classified_box">
                                     <div class="fornt">
                                        <h3>MOST INTELLIGENT SEARCH SYSTEM</h3>
-                                       <p>using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model</p>
+                                       <iframe src="file:///D:/juanperez%20repos/juanperez42.github.io/juanperez42.github.io/games/sudoku.html" width="100%" height="490" style="border:none;"></iframe>
                                     </div>
                                  </div>
                               </div>
